--- a/src/css/tables.css
+++ b/src/css/tables.css
@@ -1,9 +1,11 @@
 /* –––––––––––––––––––––––––– Tables –––––––––––––––––––––––––– */
 
 table{
-  width: 100%;
+  max-width: 100%;
   box-sizing: border-box;
   margin-bottom: 2em;
+  overflow-x: scroll;
+  display: block;
 }
 th {
   font-weight: bold;
